--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "orchestrate-be",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon listen.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Chris-Whitney/orchestrate-be.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Chris-Whitney/orchestrate-be/issues"
-  },
-  "homepage": "https://github.com/Chris-Whitney/orchestrate-be#readme",
-  "dependencies": {
-    "express": "^4.17.3",
-    "express-router": "^0.0.1",
-    "mongoose": "^6.2.2"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
-  }
+	"name": "orchestrate-be",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"leaks": "jest --runInBand --detectOpenHandles",
+		"test": "jest --watch",
+		"server": "nodemon listen.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Chris-Whitney/orchestrate-be.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Chris-Whitney/orchestrate-be/issues"
+	},
+	"homepage": "https://github.com/Chris-Whitney/orchestrate-be#readme",
+	"dependencies": {
+		"express": "^4.17.3",
+		"express-router": "^0.0.1",
+		"mongoose": "^6.2.2"
+	},
+	"devDependencies": {
+		"dotenv": "^16.0.0",
+		"jest": "^27.5.1",
+		"nodemon": "^2.0.15",
+		"supertest": "^6.2.2"
+	}
 }
