--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
 	"dependencies": {
 		"express": "^4.17.3",
 		"express-router": "^0.0.1",
-		"mongoose": "^6.2.2"
+		"mongoose": "^6.2.2",
+		"passport": "^0.5.2",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^6.1.0"
 	},
 	"devDependencies": {
 		"dotenv": "^16.0.0",
