--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
 	},
 	"homepage": "https://github.com/Chris-Whitney/orchestrate-be#readme",
 	"dependencies": {
+		"connect": "^3.7.0",
+		"connect-mongo": "^4.6.0",
 		"express": "^4.17.3",
 		"express-router": "^0.0.1",
 		"express-session": "^1.17.2",
+		"mongo": "^0.1.0",
 		"mongoose": "^6.2.2",
 		"passport": "^0.5.2",
 		"passport-local": "^1.0.0"
