--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"connect": "^3.7.0",
 		"connect-mongo": "^4.6.0",
+		"cors": "^2.8.5",
 		"express": "^4.17.3",
 		"express-router": "^0.0.1",
 		"express-session": "^1.17.2",
