--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"mongo": "^0.1.0",
 		"mongoose": "^6.2.2",
 		"passport": "^0.5.2",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"socket.io": "^4.4.1"
 	},
 	"devDependencies": {
 		"jest": "^27.5.1",
